adds userrating functionality updates stripe styles myprofile, deletes bag app

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -35,111 +35,117 @@
                     <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
                         <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
                     </a>
+                    <!-- Allow superuser to edit/delete products -->
+                    {% if request.user.is_superuser %}
+                    <a class="font-crayola" href="{% url 'edit_product' product.id %}">Edit</a>
+                    <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                    {% endif %}
                 </p>
                 {% endif %}
                 <div class="col" id="ratings">
                     <div class="row">
-                    {% if product.rating %}
-                        <div class="star-ratings-css">
-                        <div class="star-ratings-css">
-                            <div id="outer">
-                                <small class="text-muted">Rating</small><div id="inner" style="--width:{{ product.rating }}rem"></div> <div class="rating-text"></i>Rating {{ product.rating }} / 5</small></div>
-                                {% else %}
-                                <small class="text-muted">No Rating</small>
+                        {% if product.rating %}
+                            <div class="star-ratings-css">
+                                <div id="outer">
+                                    <small class="text-muted">Average rating <div>{{ product.rating }} / 5 <div id="inner" style="--width:{{ product.rating }}rem"></div> <div class="rating-text"></div></div></small>
+                                    {% else %}
+                                    <small class="text-muted">No Rating</small>
+                                </div>
                             </div>
-                        </div>
+                        {% endif %}
                     </div>
-                    {% endif %}
 
                     <!-- user rating product -->
                     {% if request.user.is_authenticated %}
-                    <form class="form update-form" method="POST" action="">
-                        {% csrf_token %}
-                        <div class="form-group">
-                            <div class="rating-input input-group">
-                                <span id="rateMe">
-                                  <i class="fas fa-star py-2 px-1 rate-popover" data-index="0" data-html="true" data-toggle="popover" data-placement="top" title="Very bad"></i>
-                                  <i class="fas fa-star py-2 px-1 rate-popover" data-index="1" data-html="true" data-toggle="popover" data-placement="top" title="Poor"></i>
-                                  <i class="fas fa-star py-2 px-1 rate-popover" data-index="2" data-html="true" data-toggle="popover" data-placement="top" title="OK"></i>
-                                  <i class="fas fa-star py-2 px-1 rate-popover" data-index="3" data-html="true" data-toggle="popover" data-placement="top" title="Good"></i>
-                                  <i class="fas fa-star py-2 px-1 rate-popover" data-index="4" data-html="true" data-toggle="popover" data-placement="top" title="Excellent"></i>
-                                </span>
-                            </div>
-                        </div>
-                    </form>
+                        {% if ratingLoopTimes == 0 %}
+                            <form class="form update-form" id="rating-form" action="{% url 'rate_product' product.id %}" method="POST">
+                                {% csrf_token %}
+                                <div class="form-group">
+                                    <div class="rating-input input-group">
+                                                <span id="rateMe"> My rating
+                                                  <i class="fas fa-star py-2 px-1 rate-popover" data-index="0" data-html="true" data-toggle="popover" data-placement="top" title="Very bad"></i>
+                                                  <i class="fas fa-star py-2 px-1 rate-popover" data-index="1" data-html="true" data-toggle="popover" data-placement="top" title="Poor"></i>
+                                                  <i class="fas fa-star py-2 px-1 rate-popover" data-index="2" data-html="true" data-toggle="popover" data-placement="top" title="OK"></i>
+                                                  <i class="fas fa-star py-2 px-1 rate-popover" data-index="3" data-html="true" data-toggle="popover" data-placement="top" title="Good"></i>
+                                                  <i class="fas fa-star py-2 px-1 rate-popover" data-index="4" data-html="true" data-toggle="popover" data-placement="top" title="Excellent"></i>
+                                                </span>
+                                        <input type="hidden" name="starinput" id="starinput" value=""/>
+                                    </div>
+                                </div>
+                            </form>
+                        {% else %}
+                            <span id="rated"> My rating
+                                {% for i in ratingLoopTimes %}
+                                    <i class="fas fa-star py-2 px-1 rate-popover fixed-amber-text" data-index="0" data-html="true" data-toggle="popover" data-placement="top" title="Very bad"></i>
+                                {% endfor %}
+                            </span>
+                        {% endif %}
                     {% endif %}
-                    <!-- Allow superuser to edit/delete products -->
-                    {% if request.user.is_superuser %}
-                        <small class="ml-3">
-                            <a class="font-crayola" href="{% url 'edit_product' product.id %}">Edit</a>
-                            <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
-                        </small>
-                    {% endif %}
-                    </div>
                 </div>
 
                 <p class="mt-3">{{ product.description }}</p>
                 <div class="chapter-badges">
                     {% for chapter in chapters %}
-                        {% if forloop.first %}
-                            <div class="row">
-                                <a class="" href="{% url 'chapter' product.id chapter.id %}">
-                                    {% if chapter.chapter == chapter.name %}
-                                        <span class="p-2 mt-2 badge badge-blue text-black rounded-5 border border-primary">{{ chapter.chapter }}</span>
-                                    {% else %}
-                                        <span class="p-2 mt-2 badge badge-blue text-black rounded-5 border border-primary">{{ chapter.chapter }} {{ chapter.name }}</span>
-                                    {% endif %}
-                                </a>
-                            </div>
-                        {% else %}
-                            {% if request.user.is_authenticated %}
-                                <div class="row">
-                                    <a data-chapterid={{ chapter.id }} data-productid={{ product.id }} data-chpmodalcode={{ chapter.modalcode }} class="chaptergroup" {% for corder in chapterOrders %}{% for item in corder.lineitems.all %}{% if chapter.chapter == item.chapter_no %}href="{% url 'chapter' product.id chapter.id %}"{% endif %}{% endfor %}{% endfor %}>
-                                        {% if chapter.chapter == chapter.name %}
-                                        <span class="chapterspan p-2 mt-2 badge badge-blue text-black rounded-5 border border-primary">{{ chapter.chapter }}</span>
-                                        {% else %}
-                                        <span class="chapterspan p-2 mt-2 badge badge-blue text-black rounded-5 border border-primary">{{ chapter.chapter }} {{ chapter.name }}</span>
-                                        {% endif %}
-                                    </a>
-                                </div>
-                                <div class="modal fade" id={{ chapter.modalcode }} role="dialog">
-                                    <div class="modal-dialog" role="document">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <h5 class="modal-title">Like the novel?</h5>
-                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                    <span aria-hidden="true">&times;</span>
-                                                </button>
-                                            </div>
-                                            <form class="mt-3 rounded-5" action="{% url 'buy_chapter' %}" method="POST">
-                                                {% csrf_token %}
-                                                <div class="modal-body">
-                                                    <p>Would you like to buy this chapter?</p>
-                                                    <p> Chapter Number: {{ chapter.chapter}} in the {{ chapter.book }}</p>
-                                                    <p> This chapter costs {{ chapter.price }} coins</p>
-                                                    <input type="hidden" name="productId" value=""/>
-                                                    <input type="hidden" name="chapterId" value=""/>
-                                                </div>
-                                                <button type="submit" class="btn btn-primary">Buy</button>
-                                            </form>
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+                    {% if forloop.first %}
+                    <div class="row">
+                        <a class="" href="{% url 'chapter' product.id chapter.id %}">
+                            {% if chapter.chapter == chapter.name %}
+                            <span class="p-2 mt-2 badge badge-blue text-black rounded-5 border border-primary">{{ chapter.chapter }}</span>
                             {% else %}
-                                <div class="row">
-                                    <a class="" href="{% url 'account_login' %}">
-                                        {% if chapter.chapter == chapter.name %}
-                                            <span class="p-2 mt-2 badge badge-white text-black rounded-5 border border-dark">{{ chapter.chapter }}</span>
-                                        {% else %}
-                                            <span class="p-2 mt-2 badge badge-white text-black rounded-5 border border-dark">{{ chapter.chapter }} {{ chapter.name }}</span>
-                                        {% endif %}
-                                    </a>
-                                </div>
+                            <span class="p-2 mt-2 badge badge-blue text-black rounded-5 border border-primary">{{ chapter.chapter }} {{ chapter.name }}</span>
                             {% endif %}
-                        {% endif%}
+                            <span class="text-dark">First chapter is free! Read now!</span>
+                        </a>
+                    </div>
+                    {% else %}
+                    {% if request.user.is_authenticated %}
+                    <div class="row">
+                        <a data-chapterid={{ chapter.id }} data-productid={{ product.id }} data-chpmodalcode={{ chapter.modalcode }} class="chaptergroup" {% for corder in chapterOrders %}{% for item in corder.lineitems.all %}{% if chapter.chapter == item.chapter_no %}href="{% url 'chapter' product.id chapter.id %}"{% endif %}{% endfor %}{% endfor %}>
+                            {% if chapter.chapter == chapter.name %}
+                            <span class="chapterspan p-2 mt-2 badge badge-blue text-black rounded-5 border border-primary">{{ chapter.chapter }}</span>
+                            {% else %}
+                            <span class="chapterspan p-2 mt-2 badge badge-blue text-black rounded-5 border border-primary">{{ chapter.chapter }} {{ chapter.name }}</span>
+                            {% endif %}
+                        </a>
+                    </div>
+                    <div class="modal fade" id={{ chapter.modalcode }} role="dialog">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title">Like the novel?</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <form class="mt-3 rounded-5" action="{% url 'buy_chapter' %}" method="POST">
+                                    {% csrf_token %}
+                                    <div class="modal-body">
+                                        <p>Would you like to buy this chapter?</p>
+                                        <p> Chapter Number: {{ chapter.chapter}} in <strong>{{ chapter.book }}</strong></p>
+                                        <p> This chapter costs {{ chapter.price }} coins</p>
+                                        <input type="hidden" name="productId" value=""/>
+                                        <input type="hidden" name="chapterId" value=""/>
+                                    </div>
+                                    <button type="submit" class="btn btn-primary">Buy</button>
+                                </form>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    {% else %}
+                    <div class="row">
+                        <a class="" href="{% url 'account_login' %}">
+                            {% if chapter.chapter == chapter.name %}
+                            <span class="p-2 mt-2 badge badge-white text-black rounded-5 border border-dark">{{ chapter.chapter }}</span>
+                            {% else %}
+                            <span class="p-2 mt-2 badge badge-white text-black rounded-5 border border-dark">{{ chapter.chapter }} {{ chapter.name }}</span>
+                            {% endif %}
+                        </a>
+                    </div>
+                    {% endif %}
+                    {% endif%}
                     {% endfor %}
                 </div>
                 <div class="col{% if s %}-12 mt-2{% endif %}">
@@ -149,7 +155,6 @@
                         </span>
                         <span class="text-uppercase">Other books</span>
                     </a>
-                    <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
                 </div>
                 <input type="hidden" name="redirect_url" value="{{ request.path }}">
             </div>
@@ -161,100 +166,9 @@
 
 {% block postloadjs %}
 {{ block.super }}
-<script>
 
-    var links = document.getElementsByClassName("chaptergroup");
+<script type="text/javascript" src="{% static 'chapters/js/chapter.js' %}"></script>
+<script type="text/javascript" src="{% static 'chapters/js/rating.js' %}"></script>
 
-    for(var i = 0; i < links.length; i++){
 
-        if (!links[i].hasAttribute("href")){
-            links[i].setAttribute("data-toggle", "modal");
-            links[i].setAttribute("href", "#");
-        }
-
-        if (links[i].getAttribute("href").localeCompare("#") == 0)
-        {
-            //links[i].removeAttribute("href", "#");
-            var value = links[i].getAttribute("data-chpmodalcode");
-            links[i].setAttribute("href", "#"+value);
-            var chapspan = links[i].getElementsByClassName("chapterspan");
-
-            for(var k = 0; k < chapspan.length; k++)
-            {
-                chapspan[k].setAttribute("class", "chapterspan p-2 mt-2 badge badge-white text-black rounded-5 border border-warning");
-            }
-
-            $(document).on("click", ".chaptergroup", function () {
-                var myChapterId = $(this).data('chapterid');
-                var cid = document.getElementsByName("chapterId");
-                for(var i = 0; i < cid.length; i++){
-                    cid[i].setAttribute("value", myChapterId);
-                }
-                var myProductId = $(this).data('productid');
-                var pid = document.getElementsByName("productId");
-                for(var i = 0; i < pid.length; i++){
-                    pid[i].setAttribute("value", myProductId);
-                }
-            });
-        }
-    }
-
-</script>
-
-<script>
-var $stars;
-
-jQuery(document).ready(function ($) {
-
-  // Custom whitelist to allow for using HTML tags in popover content
-  var myDefaultWhiteList = $.fn.tooltip.Constructor.Default.whiteList
-  myDefaultWhiteList.textarea = [];
-  myDefaultWhiteList.button = [];
-
-  $stars = $('.rate-popover');
-
-  $stars.on('mouseover', function () {
-    var index = $(this).attr('data-index');
-    markStarsAsActive(index);
-  });
-
-  function markStarsAsActive(index) {
-    unmarkActive();
-    for (var i = 0; i <= index; i++) {
-      $($stars.get(i)).addClass('amber-text');
-    }
-  }
-
-  function unmarkActive() {
-    $stars.removeClass('amber-text');
-  }
-
-  $stars.on('click', function () {
-    $stars.popover('hide');
-  });
-
-  // Submit, you can add some extra custom code here
-  // ex. to send the information to the server
-  $('#rateMe').on('click', '#voteSubmitButton',  function() {
-    $stars.popover('hide');
-  });
-
-  // Cancel, just close the popover
-  $('#rateMe').on('click', '#closePopoverButton', function() {
-    $stars.popover('hide');
-  });
-
-});
-
-$(function () {
-  $('.rate-popover').popover({
-    // Append popover to #rateMe to allow handling form inside the popover
-    container: '#rateMe',
-    // Custom content for popover
-    content: `<div class="popover-inner my-0 py-0 md-form"> <textarea class="popover invisible sm-textarea form-control py-0"></textarea><button id="voteSubmitButton" type="submit" class="btn btn-sm btn-primary">Submit!</button> <button id="closePopoverButton" class="btn btn-flat btn-sm">Close</button> </div>`
-  });
-  $('.rate-popover').tooltip();
-});
-
-</script>
 {% endblock %}
