--- a/bookCoins/templates/bookCoins/topup_coins.html
+++ b/bookCoins/templates/bookCoins/topup_coins.html
@@ -77,7 +77,7 @@
             </fieldset>
 
             <div class="submit-button text-right mt-5 mb-2">
-                <a href="" class="btn btn-outline-black rounded-0">
+                <a href="{% url 'profile' %}" class="btn btn-outline-black rounded-0">
 							<span class="icon">
 								<i class="fas fa-chevron-left"></i>
 							</span>
