--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -19,10 +19,7 @@
     <div class="row">
         <div class="col">
             <hr>
-            <h2 class="logo-font mb-4">Hello, {{ profile.user }}
-                {% if profile.is_author == False %}
-                    <button class="btn btn-black btn-profile rounded-5 text-uppercase float-right">Become An Author!</button>
-                {% endif %}</h2>
+            <h2 class="logo-font mb-4">Hello, {{ profile.user }}</h2>
             <hr>
         </div>
 
@@ -30,13 +27,14 @@
 
     <div class="row">
         <div class="col-12 col-lg-6">
-            <p>Your Bookcoins: {{ profile.bookcoins }}</p>
+            <h5>Your Bookcoins: {{ profile.bookcoins }}</h5>
         </div>
         <div class="col-12 col-lg-6">
             <button class="btn btn-black rounded-5 btn-profile text-uppercase float-right" onclick="location.href='{% url 'topup_coins' %}'">Top up bookcoins</button>
         </div>
 
     </div>
+    <hr>
     <div class="row">
         <div class="col-12 col-lg-6">
             <p class="text-muted">Order Coin History</p>
@@ -85,6 +83,7 @@
             </div>
         </div>
     </div>
+    <hr>
     <div class="row">
         <div class="col-24 col-lg-12">
             <p class="text-muted">Your Bookshelf</p>
