--- a/profiles/templates/profiles/update_billing.html
+++ b/profiles/templates/profiles/update_billing.html
@@ -29,13 +29,17 @@
             <form class="mt-3 rounded-5" action="{% url 'update_billing' %}" method="POST" id="profile-update-form">
                 {% csrf_token %}
                 {{ form|crispy }}
+                <a href="{% url 'profile' %}" class="btn btn-outline-black rounded-0">
+                        <span class="icon">
+                            <i class="fas fa-chevron-left"></i>
+                        </span>
+                    <span class="font-weight-bold">Back to Profile</span>
+                </a>
                 <button class="btn btn-black rounded-5 text-uppercase float-right">Update Information</button>
             </form>
         </div>
     </div>
-    <div class="cancel">
-        <a class="btn btn-outline-black px-0 rounded-0" href="{% url 'home' %}">Cancel</a>
-    </div>
+
     {% endblock %}
 
     {% block postloadjs %}
