product detail.html; fixed buy chapter; update.js, chapter.js, rating.js

--- a/bookCoins/templates/bookCoins/topup_coins.html
+++ b/bookCoins/templates/bookCoins/topup_coins.html
@@ -115,4 +115,5 @@
 {{ stripe_public_key|json_script:"id_stripe_public_key" }}
 {{ client_secret|json_script:"id_client_secret" }}
 <script src="{% static 'bookCoins/js/stripe_elements.js' %}"></script>
+<script src="{% static 'bookCoins/js/update.js' %}"></script>
 {% endblock %}
